--- a/src/app/paises/pages/selectores-page/selectores-page.component.html
+++ b/src/app/paises/pages/selectores-page/selectores-page.component.html
@@ -15,7 +15,7 @@
     </div>
 
     <!-- Paises -->
-    <div class="row mb-3">
+    <div class="row mb-3" *ngIf="paisesByRegion.length !== 0">
         <div class="col">
             <label class="form-label">País:</label>
             <select class="form-control" formControlName="pais"> 
@@ -26,7 +26,7 @@
     </div>
 
      <!-- Fronteras -->
-     <div class="row mb-3">
+     <div class="row mb-3" *ngIf="paisesFronterizos.length !== 0">
         <div class="col">
             <label class="form-label">Fronteras:</label>
             <select class="form-control" formControlName="frontera"> 
@@ -36,6 +36,13 @@
         </div>
     </div>
 
+    <div class="row" *ngIf="cargando">
+        <div class="col">
+            <div class="alert alert-primary">
+                Cargando...
+            </div>
+        </div>
+    </div>
 
     <div class="row">
         <div class="col">
